cabal-version:   3.0
name:            convent-db
version:         0.0.1.0
synopsis:        A simple database.
license:         MIT
license-file:    LICENSE
author:          Barnaba Piotrowski
maintainer:      barnaba.piotrowski@gmail.com
category:        Database
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable convent-db
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
